<package>
  <name>saw_ati_force_sensor</name>
  <version>1.4.0</version>
  <description>
  sawATIForceSensor
  </description>
  <maintainer email="anton.deguet@jhu.edu">Anton Deguet</maintainer>
  <license>cisst</license>
  <url>https://github.com/jhu-saw/sawATIForceSensor</url>

  <build_depend>cisst_netlib</build_depend>
  <build_depend>cisst</build_depend>

  <run_depend>cisst_netlib</run_depend>
  <run_depend>cisst</run_depend>
  
  <export>
    <build_type>catkin</build_type>
  </export>

</package>
