<package>
  <name>saw_ati_force_sensor_examples</name>
  <version>1.3.0</version>
  <description>
  sawATIForceSensor
  </description>
  <maintainer email="pchalas1@jhu.edu">Preetham Chalasani</maintainer>
  <license>cisst</license>
  <url>https://github.com/jhu-saw/sawATIForceSensor</url>

  <build_depend>cisst_netlib</build_depend>
  <build_depend>cisst</build_depend>

  <build_depend>saw_ati_force_sensor</build_depend>
  <build_depend>saw_text_to_speech</build_depend>

  <run_depend>cisst_netlib</run_depend>
  <run_depend>cisst</run_depend>

  <run_depend>saw_ati_force_sensor</run_depend>
  <run_depend>saw_text_to_speech</run_depend>
  
  <export>
    <build_type>catkin</build_type>
  </export>

</package>
